[gd_scene load_steps=7 format=3 uid="uid://bwsw72wbpdkyb"]

[ext_resource type="Script" path="res://objects/Enemy/enemies/ground_skeleton.gd" id="1_c2vt7"]
[ext_resource type="PackedScene" uid="uid://da7ac6soixcdc" path="res://assets/models/ground_skeleton.blend" id="1_cktr5"]
[ext_resource type="PackedScene" uid="uid://dhvfd64xwly0e" path="res://assets/models/bone_projectile.blend" id="3_nbfkt"]

[sub_resource type="Animation" id="Animation_1o0i1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bone_projectile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bone_projectile:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wh267"]
resource_name = "bone_toss"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bone_projectile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bone_projectile:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxijc"]
_data = {
"RESET": SubResource("Animation_1o0i1"),
"bone_toss": SubResource("Animation_wh267")
}

[node name="GroundSkeleton" type="Node3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -4.56886, -2.72957, 0)
script = ExtResource("1_c2vt7")

[node name="ground_skeleton" parent="." instance=ExtResource("1_cktr5")]

[node name="bone_projectile" parent="." instance=ExtResource("3_nbfkt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45982, 23.9181, 0.0807196)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxijc")
}
